k8s/base/namespace-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    kubernetes.io/metadata.name: app
